# rcspp

./: .clang-format  .clang-tidy  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-format.yml  pre-commit.yml  tests.yml
instances/: C101.txt  C101_10.txt  C101_25.txt  C101_5.txt  C101_50.txt  C102.txt  C102_0_test.txt  C102_10.txt  C102_25.txt  C102_test.txt  C103.txt  C104.txt  C105.txt  C106.txt  C107.txt  C108.txt  C109.txt  C201.txt  C202.txt  C203.txt  C204.txt  C205.txt  C206.txt  C207.txt  C208.txt  R101.txt  R101_10.txt  R101_15.txt  R101_25.txt  R101_5.txt  R101_50.txt  R101_75.txt  R102.txt  R102_50.txt  R103.txt  R104.txt  R105.txt  R106.txt  R107.txt  R108.txt  (+34 more)
instances/duals/R101/: iter_0.txt  iter_1.txt  iter_10.txt  iter_100.txt  iter_101.txt  iter_102.txt  iter_103.txt  iter_104.txt  iter_105.txt  (+121 more)
rcspp/: CMakeLists.txt  rcspp.cpp  rcspp.h
rcspp/algorithm/: algorithm.cpp  algorithm.h  dominance_algorithm.cpp  dominance_algorithm.h  solution.h
rcspp/general/: clonable.h
rcspp/graph/: arc.cpp  arc.h  graph.cpp  graph.h  node.cpp  node.h
rcspp/label/: label.cpp  label.h  label_factory.cpp  label_factory.h  label_pool.cpp  label_pool.h
rcspp/resource/: concrete_resource.h  concrete_resource_factory.h  resource.cpp  resource.h  resource_factory.cpp  resource_factory.h
rcspp/solver/: rcspp_solver.cpp  rcspp_solver.h
src/cmake/: CMakeLists.txt
src/python/: test_rcspp.py  test_rcspp_networkx.py
src/python_interface/: CMakeLists.txt
src/python_interface/rcspp/: __init__.py  graph.cpp  graph.py  rcspp.cpp  resource.cpp  resource.py
src/rcspp/: CMakeLists.txt  generate_umbrella_include.cmake  rcspp.hpp
src/rcspp/algorithm/: algorithm.hpp  algorithm_with_iterators.hpp  bellman_ford_algorithm.cpp  bellman_ford_algorithm.hpp  connectivity_matrix.hpp  diversification_search.hpp  dominance_algorithm.hpp  dominance_algorithm_iterators.hpp  feasibility_preprocessor.hpp  greedy.hpp  preprocessor.hpp  pulling_dominance_algorithm.hpp  pulling_dominance_algorithm_iterators.hpp  pushing_dominance_algorithm.hpp  pushing_dominance_algorithm_iterators.hpp  shortest_path_connectivity_sort.hpp  shortest_path_preprocessor.hpp  shortest_path_sort.hpp  simple_dominance_algorithm.hpp  simple_dominance_algorithm_iterators.hpp  solution.hpp  tabu_search.hpp
src/rcspp/general/: clonable.hpp
src/rcspp/graph/: arc.hpp  graph.hpp  node.hpp  row.hpp
src/rcspp/label/: label.hpp  label_factory.hpp  label_pool.hpp
src/rcspp/preprocessor/: bellman_ford_algorithm.hpp  connectivity_matrix.hpp  feasibility_preprocessor.hpp  shortest_path_connectivity_sort.hpp  shortest_path_preprocessor.hpp
src/rcspp/resource/: resource_graph.hpp  resource_traits.hpp
src/rcspp/resource/base/: expander.hpp  extender.hpp  extender_prototype.hpp  resource.hpp  resource_base.hpp  resource_factory.hpp  resource_prototype.hpp
src/rcspp/resource/composition/: composition.hpp  extender_composition.hpp  resource_base_composition.hpp  resource_composition.hpp  resource_composition_factory.hpp
src/rcspp/resource/composition/functions/cost/: component_cost_function.hpp  composition_cost_function.hpp
src/rcspp/resource/composition/functions/dominance/: component_dominance_function.hpp  composition_dominance_function.hpp
src/rcspp/resource/composition/functions/expansion/: composition_expansion_function.hpp
src/rcspp/resource/composition/functions/extension/: composition_extension_function.hpp
src/rcspp/resource/composition/functions/feasibility/: composition_feasibility_function.hpp
src/rcspp/resource/concrete/: container_resource.hpp  num_resource.hpp  numerical_resource.hpp  real_resource.cpp  real_resource.hpp  real_resource_factory.cpp  real_resource_factory.hpp
src/rcspp/resource/concrete/functions/cost/: real_value_cost_function.cpp  real_value_cost_function.hpp  value_cost_function.hpp
src/rcspp/resource/concrete/functions/dominance/: inclusion_dominance_function.hpp  real_value_dominance_function.cpp  real_value_dominance_function.hpp  value_dominance_function.hpp
src/rcspp/resource/concrete/functions/expansion/: real_addition_expansion_function.cpp  real_addition_expansion_function.hpp  time_window_expansion_function.cpp  time_window_expansion_function.hpp
src/rcspp/resource/concrete/functions/extension/: addition_extension_function.hpp  intersection_extension_function.hpp  ng-path_extension_function.hpp  real_addition_extension_function.cpp  real_addition_extension_function.hpp  time_window_extension_function.cpp  time_window_extension_function.hpp  union_extension_function.hpp
src/rcspp/resource/concrete/functions/feasibility/: intersect_feasibility_function.hpp  min_max_feasibility_function.cpp  min_max_feasibility_function.hpp  time_window_feasibility_function.cpp  time_window_feasibility_function.hpp
src/rcspp/resource/functions/cost/: cost_function.hpp  trivial_cost_function.hpp
src/rcspp/resource/functions/dominance/: dominance_function.hpp  trivial_dominance_function.hpp
src/rcspp/resource/functions/expansion/: expansion_function.hpp  trivial_expansion_function.hpp
src/rcspp/resource/functions/extension/: extension_function.hpp  trivial_extension_function.hpp
src/rcspp/resource/functions/feasibility/: feasibility_function.hpp  trivial_feasibility_function.hpp
src/rcspp/utils/: logger.hpp  timer.cpp  timer.hpp  utils.hpp
src/vrp/: CMakeLists.txt  benchmark_main.cpp  customer.cpp  customer.hpp  instance.cpp  instance.hpp  instance_reader.cpp  instance_reader.hpp  main.cpp  solution_output.cpp  solution_output.hpp  vrp.cpp  vrp.hpp
src/vrp/cg/: master_problem.cpp  master_problem.hpp  mp_solution.hpp  path.cpp  path.hpp
src/vrp/cg/subproblem/boost/: boost_subproblem.cpp  boost_subproblem.hpp  graph_vrptw.cpp  graph_vrptw.hpp
src/vrp/cmake/: FindGUROBI.cmake
tests/rcspp/: CMakeLists.txt  test_connectivity.cpp  test_main.cpp  test_main.hpp  test_rcspp.cpp  test_rcspp.hpp
tests/rcspp/vrp_subproblem/: vrp_subproblem.cpp  vrp_subproblem.hpp
(+46 files in other folders)
